WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208823
WebKitTestRunner bundleID should not be cleared before every test
https://bugs.webkit.org/show_bug.cgi?id=208823
Summary
WebKitTestRunner bundleID should not be cleared before every test
Kate Cheney
Reported
2020-03-09 10:57:15 PDT
This is causing test failures for layout tests which rely on the Info.plist bundle identifier (not the one set via the override method)
Attachments
Patch
(1.94 KB, patch)
2020-03-09 11:14 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2020-03-09 10:57:43 PDT
<
rdar://problem/60204539
>
Kate Cheney
Comment 2
2020-03-09 11:14:09 PDT
Created
attachment 393056
[details]
Patch
Per Arne Vollan
Comment 3
2020-03-09 14:20:38 PDT
Comment on
attachment 393056
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393056&action=review
> Tools/WebKitTestRunner/TestController.cpp:643 > + clearApplicationBundleIdentifierTestingOverride();
What happens with the next test if this is executed? Will it use the new bundle id, or fall back to the one from Info.plist?
Kate Cheney
Comment 4
2020-03-09 14:23:55 PDT
(In reply to Per Arne Vollan from
comment #3
)
> Comment on
attachment 393056
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=393056&action=review
> > > Tools/WebKitTestRunner/TestController.cpp:643 > > + clearApplicationBundleIdentifierTestingOverride(); > > What happens with the next test if this is executed? Will it use the new > bundle id, or fall back to the one from Info.plist?
Every test will start out with the Info.plist bundle ID. It will only be changed from that if a test manually sets the bundleID using TestOptions.
Per Arne Vollan
Comment 5
2020-03-09 14:27:08 PDT
Comment on
attachment 393056
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393056&action=review
R=me.
>>> Tools/WebKitTestRunner/TestController.cpp:643 >>> + clearApplicationBundleIdentifierTestingOverride(); >> >> What happens with the next test if this is executed? Will it use the new bundle id, or fall back to the one from Info.plist? > > Every test will start out with the Info.plist bundle ID. It will only be changed from that if a test manually sets the bundleID using TestOptions.
Sounds good!
Kate Cheney
Comment 6
2020-03-09 16:14:47 PDT
(In reply to Per Arne Vollan from
comment #5
)
> Comment on
attachment 393056
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=393056&action=review
> > R=me. > > >>> Tools/WebKitTestRunner/TestController.cpp:643 > >>> + clearApplicationBundleIdentifierTestingOverride(); > >> > >> What happens with the next test if this is executed? Will it use the new bundle id, or fall back to the one from Info.plist? > > > > Every test will start out with the Info.plist bundle ID. It will only be changed from that if a test manually sets the bundleID using TestOptions. > > Sounds good!
Thanks for the review!
WebKit Commit Bot
Comment 7
2020-03-09 16:59:45 PDT
Comment on
attachment 393056
[details]
Patch Clearing flags on attachment: 393056 Committed
r258178
: <
https://trac.webkit.org/changeset/258178
>
WebKit Commit Bot
Comment 8
2020-03-09 16:59:47 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2020-03-09 17:00:31 PDT
<
rdar://problem/60250510
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug