WebKitTestRunner bundleID should not be cleared before every test https://bugs.webkit.org/show_bug.cgi?id=208823 <rdar://problem/60204539>

Reviewed by Per Arne Vollan.

This is causing test failures for layout tests which rely on the Info.plist
bundle identifier (not the one set via the override method).

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::createWebViewWithOptions):
(WTR::TestController::ensureViewSupportsOptionsForTest):
* WebKitTestRunner/cocoa/TestControllerCocoa.mm:


Canonical link: https://commits.webkit.org/221770@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258178 268f45cc-cd09-0410-ab3c-d52691b4dbfc